// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Verify Recover Email Controller Snapshot Test for database error 1`] = `
{
  "body": {
    "message": "Something went wrong. Please try again later.",
    "success": false,
  },
  "status": 500,
}
`;

exports[`Verify Recover Email Controller Snapshot Test for email not verified 1`] = `
{
  "body": {
    "message": "Email not verified. You can't recover the account.",
    "success": false,
  },
  "status": 403,
}
`;

exports[`Verify Recover Email Controller Snapshot Test for expired token 1`] = `
{
  "body": {
    "message": "Your verification link has expired. Please request a new one.",
    "success": false,
  },
  "status": 410,
}
`;

exports[`Verify Recover Email Controller Snapshot Test for inactive user 1`] = `
{
  "body": {
    "message": "Your account is blocked. Recovery is not allowed.",
    "success": false,
  },
  "status": 403,
}
`;

exports[`Verify Recover Email Controller Snapshot Test for invalid OTP 1`] = `
{
  "body": {
    "message": "Incorrect OTP. Please try again.",
    "success": false,
  },
  "status": 422,
}
`;

exports[`Verify Recover Email Controller Snapshot Test for invalid token type 1`] = `
{
  "body": {
    "message": "Your verification link is invalid. Please request a new one.",
    "success": false,
  },
  "status": 410,
}
`;

exports[`Verify Recover Email Controller Snapshot Test for missing OTP 1`] = `
{
  "body": {
    "message": "OTP and email is required.",
    "success": false,
  },
  "status": 400,
}
`;

exports[`Verify Recover Email Controller Snapshot Test for missing password fields 1`] = `
{
  "body": {
    "message": "Password and confirm password are required.",
    "success": false,
  },
  "status": 400,
}
`;

exports[`Verify Recover Email Controller Snapshot Test for missing token in link mode 1`] = `
{
  "body": {
    "message": "Verification token is missing. Please check your email link.",
    "success": false,
  },
  "status": 400,
}
`;

exports[`Verify Recover Email Controller Snapshot Test for password mismatch 1`] = `
{
  "body": {
    "message": "Password and confirm password must match.",
    "success": false,
  },
  "status": 422,
}
`;

exports[`Verify Recover Email Controller Snapshot Test for successful password update using OTP 1`] = `
{
  "body": {
    "data": {
      "email": "test@gmail.com",
      "fullName": "Test User",
    },
    "message": "Password updated successfully.",
    "success": true,
  },
  "status": 200,
}
`;

exports[`Verify Recover Email Controller Snapshot Test for successful password update using link 1`] = `
{
  "body": {
    "data": {
      "email": "test@gmail.com",
      "fullName": "Test User",
    },
    "message": "Password updated successfully.",
    "success": true,
  },
  "status": 200,
}
`;

exports[`Verify Recover Email Controller Snapshot Test for user not found 1`] = `
{
  "body": {
    "message": "Invalid token. Please re-check it.",
    "success": false,
  },
  "status": 404,
}
`;

exports[`Verify Recover Email Controller Snapshot Test for weak password 1`] = `
{
  "body": {
    "message": "Password must be at least 8 characters long and include uppercase, lowercase, a digit, and a special character.",
    "success": false,
  },
  "status": 400,
}
`;
